# QuickSpaceScan

./: .gitignore  .qmlls.ini  CMakeLists.txt  Main.qml  README.md  main.cpp  system_paths.json
resources/: ai_config.json  app.rc  resources.qrc  system_paths.json
src/adapters/: drivemanager.cpp  drivemanager.h
src/ai/: airiskprovider.cpp  airiskprovider.h
src/core/: appsettings.cpp  appsettings.h  scanengine.cpp  scanengine.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
src/risk/: pathriskprovider.cpp  pathriskprovider.h
ui/components/: IconButton.qml  SettingsDialog.qml  StatusBar.qml  TreeItemDelegate.qml  TreeListView.qml
ui/themes/: DarkTheme.qml  LightTheme.qml  ThemeManager.qml
ui/views/: HomeView.qml  Sidebar.qml
